tf/network.tf

# VPC
resource "aws_vpc" "tiagotest" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name                                        = "${var.name}-vpc",
    "kubernetes.io/cluster/${var.name}-cluster" = "shared"
  }
}

# Public Subnets
resource "aws_subnet" "public" {
count = var.availability_zones_count
  vpc_id            = aws_vpc.tiagotest.id
  cidr_block        = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index]
  tags = {
    Name                                           = "${var.name}-public-sg"
    "kubernetes.io/cluster/${var.name}-cluster" = "shared"
    "kubernetes.io/role/elb"                       = 1
  }
  map_public_ip_on_launch = true
}

# Private Subnets
resource "aws_subnet" "private" {
  count = var.availability_zones_count
  vpc_id            = aws_vpc.tiagotest.id
  cidr_block        = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index]
  tags = {
    Name                                           = "${var.name}-private-sg"
    "kubernetes.io/cluster/${var.name}-cluster" = "shared"
    "kubernetes.io/role/internal-elb"              = 1
  }
}

# Internet Gateway
resource "aws_internet_gateway" "tiagotest-igw" {
  vpc_id = "${aws_vpc.tiagotest.id}"
  tags = {
    "Name" = "${var.name}-igw"
  }
  depends_on = [aws_vpc.tiagotest]
}

# Route Table(s)
# Route the public subnet traffic through the IGW
resource "aws_route_table" "tiagotest-main" {
  vpc_id = aws_vpc.tiagotest.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.tiagotest-igw.id
  }

  tags = {
    Name = "${var.name}-Default-rt"
  }
}

# Route table and subnet associations
resource "aws_route_table_association" "internet_access" {
  count          = var.availability_zones_count
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.tiagotest-main.id
}

# NAT Elastic IP
resource "aws_eip" "tiagotest-main" {
  vpc = true
  tags = {
    Name = "${var.name}-ngw-ip"
  }
}

# NAT Gateway
resource "aws_nat_gateway" "tiagotest-main" {
  allocation_id = aws_eip.tiagotest-main.id
  subnet_id     = aws_subnet.public[0].id
  tags = {
    Name = "${var.name}-ngw"
  }
}

# Add route to route table
resource "aws_route" "tiagotest-main" {
  route_table_id         = aws_vpc.tiagotest.default_route_table_id
  nat_gateway_id         = aws_nat_gateway.tiagotest-main.id
  destination_cidr_block = "0.0.0.0/0"
}

# Security group for public subnet
resource "aws_security_group" "tiagotest_public_sg" {
  name   =  "${var.name}-Public-sg"
  vpc_id = "${aws_vpc.tiagotest.id}"

  tags = {
    Name = "${var.name}-Public-sg"
  }
}

# Security group traffic rules
resource "aws_security_group_rule" "sg_ingress_public_443" {
  security_group_id = aws_security_group.tiagotest_public_sg.id
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "sg_ingress_public_80" {
  security_group_id = aws_security_group.tiagotest_public_sg.id
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "sg_egress_public" {
  security_group_id = aws_security_group.tiagotest_public_sg.id
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

# Security group for data plane
resource "aws_security_group" "tiagotest_data_plane_sg" {
  name   =  "${var.name}-Worker-sg"
  vpc_id = "${aws_vpc.tiagotest.id}"
  tags = {
    Name = "${var.name}-Worker-sg"
  }
}

# Security group traffic rules
resource "aws_security_group_rule" "tiagotest-nodes" {
  description       = "Allow nodes to communicate with each other"
  security_group_id = aws_security_group.tiagotest_data_plane_sg.id
  type              = "ingress"
  from_port         = 0
  to_port           = 65535
  protocol          = "-1"
  cidr_blocks       = flatten([cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 0), cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 1), cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 2), cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 3)])
}

resource "aws_security_group_rule" "tiagotest_nodes_inbound" {
  description       = "Allow worker Kubelets and pods to receive communication from the cluster control plane"
  security_group_id = aws_security_group.tiagotest_data_plane_sg.id
  type              = "ingress"
  from_port         = 1025
  to_port           = 65535
  protocol          = "tcp"
  cidr_blocks       = flatten([cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 2), cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 3)])
}

resource "aws_security_group_rule" "tiagotest_node_outbound" {
  security_group_id = aws_security_group.tiagotest_data_plane_sg.id
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

# Security group for control plane
resource "aws_security_group" "tiagotest_control_plane_sg" {
  name   = "${var.name}-ControlPlane-sg"
  vpc_id = "${aws_vpc.tiagotest.id}"
  tags = {
    Name = "${var.name}-ControlPlane-sg"
  }
}

# Security group traffic rules
resource "aws_security_group_rule" "tiagotest_control_plane_inbound" {
  security_group_id = aws_security_group.tiagotest_control_plane_sg.id
  type              = "ingress"
  from_port         = 0
  to_port           = 65535
  protocol          = "tcp"
  cidr_blocks       = flatten([cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 0), cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 1), cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 2), cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, 3)])
}

resource "aws_security_group_rule" "tiagotest_control_plane_outbound" {
  security_group_id = aws_security_group.tiagotest_control_plane_sg.id
  type              = "egress"
  from_port         = 0
  to_port           = 65535
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}
